# arrow-ml

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench.yml  ci.yml  pr.yml  release-metal.yml  release.yml
crates/arrow-kernels/: Cargo.toml
crates/arrow-kernels-activations/: Cargo.toml
crates/arrow-kernels-activations/src/: gelu.rs  lib.rs  relu.rs  sigmoid.rs  softmax.rs
crates/arrow-kernels-backend-metal/: Cargo.toml
crates/arrow-kernels-backend-metal/src/: lib.rs  matmul.rs
crates/arrow-kernels-common/: Cargo.toml
crates/arrow-kernels-common/src/: backend.rs  registry.rs
crates/arrow-kernels-linalg/: Cargo.toml
crates/arrow-kernels-linalg/benches/: matmul_bench.rs
crates/arrow-kernels-linalg/src/: argmax.rs  axpy.rs  batchnorm.rs  binary_arithmetic.rs  broadcast.rs  cast.rs  clip.rs  comparison.rs  concat.rs  conv.rs  conv_transpose.rs  cumsum.rs  dot.rs  elementwise_math.rs  embedding.rs  expand.rs  gather.rs  gather_elements.rs  group_norm.rs  instance_norm.rs  layernorm.rs  lib.rs  logical.rs  modulo.rs  nms.rs  nonzero.rs  norms.rs  onehot.rs  pad.rs  pooling.rs  reduce.rs  reshape.rs  resize.rs  rounding.rs  scal.rs  scatter_elements.rs  scatter_nd.rs  shape_utils.rs  topk.rs  transpose.rs  (+1 more)
crates/arrow-kernels-linalg/src/matmul/: kernel_f32.rs  kernel_f64.rs  mod.rs  packing.rs
crates/arrow-kernels/examples/: cnn_pipeline.rs  mlp_forward.rs  transformer_block.rs
crates/arrow-kernels/src/: array_ops.rs  lib.rs  tensor_ops.rs
crates/arrow-kernels/tests/: tensor_ops_tests.rs
crates/arrow-ml/: Cargo.toml
crates/arrow-ml-activations/: Cargo.toml
crates/arrow-ml-activations/benches/: gelu_bench.rs  relu_bench.rs  sigmoid_bench.rs  silu_bench.rs  softmax_bench.rs  tanh_bench.rs
crates/arrow-ml-activations/src/: gelu.rs  layernorm.rs  lib.rs  relu.rs  silu.rs  softmax.rs  tanh.rs
crates/arrow-ml-activations/src/gelu/: kernel_f32.rs  kernel_f64.rs  mod.rs
crates/arrow-ml-activations/src/relu/: kernel_f32.rs  kernel_f64.rs  mod.rs
crates/arrow-ml-activations/src/sigmoid/: kernel_f32.rs  kernel_f64.rs  mod.rs
crates/arrow-ml-activations/src/silu/: kernel_f32.rs  kernel_f64.rs  mod.rs
crates/arrow-ml-activations/src/softmax/: kernel_f16.rs  kernel_f32.rs  kernel_f64.rs  kernel_naive.rs  kernel_simd.rs  mod.rs
crates/arrow-ml-activations/src/tanh/: kernel_f32.rs  kernel_f64.rs  mod.rs
crates/arrow-ml-backend-metal/: Cargo.toml  README.md
crates/arrow-ml-backend-metal/manifests/: metal.json
crates/arrow-ml-backend-metal/src/: gelu.rs  layernorm.rs  lib.rs  matmul.rs  softmax.rs
crates/arrow-ml-common/: Cargo.toml
crates/arrow-ml-common/src/: backend.rs  device_tensor.rs  error.rs  host_tensor.rs  lib.rs  manifest.rs  registry.rs
crates/arrow-ml-common/src/kernels/: device.rs  gelu.rs  layernorm.rs  matmul.rs  mod.rs  softmax.rs
crates/arrow-ml-core/: Cargo.toml
crates/arrow-ml-core/src/: array.rs  buffer.rs  device.rs  error.rs  lib.rs  tensor.rs
crates/arrow-ml-core/tests/: metal.rs
crates/arrow-ml-linalg/: Cargo.toml
crates/arrow-ml-linalg/benches/: matmul_bench.rs  reduce_bench.rs
crates/arrow-ml-linalg/src/: argmax.rs  axpy.rs  batchnorm.rs  binary_arithmetic.rs  broadcast.rs  cast.rs  clip.rs  comparison.rs  concat.rs  conv.rs  conv_transpose.rs  cumsum.rs  dot.rs  elementwise_math.rs  embedding.rs  error.rs  expand.rs  gather.rs  gather_elements.rs  group_norm.rs  instance_norm.rs  layernorm.rs  lib.rs  logical.rs  matmul.rs  modulo.rs  nms.rs  nonzero.rs  norms.rs  onehot.rs  pad.rs  pooling.rs  reduce.rs  reshape.rs  resize.rs  rounding.rs  scal.rs  scatter_elements.rs  scatter_nd.rs  shape_utils.rs  (+3 more)
crates/arrow-ml-linalg/src/matmul/: host_tensor.rs  kernel_f32.rs  kernel_f64.rs  mod.rs  packing.rs
crates/arrow-ml/examples/: cnn_pipeline.rs  metal_layernorm.rs  metal_matmul.rs  metal_softmax.rs  mlp_forward.rs  transformer_block.rs
crates/arrow-ml/src/: array_ops.rs  lib.rs  tensor_ops.rs
crates/arrow-ml/tests/: array_bridge.rs  cpu_matmul.rs  metal_gelu.rs  metal_layernorm.rs  metal_softmax.rs  tensor_bridge.rs  tensor_ops_tests.rs
