[workspace]
resolver = "2"
members = [
    "crates/arrow-kernels-common",
    "crates/arrow-kernels-linalg",
    "crates/arrow-kernels-activations",
    "crates/arrow-kernels",
    "crates/arrow-kernels-backend-metal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
arrow = "57"
num-traits = "0.2"
rayon = "1.10"
metal = "0.31"
libloading = "0.8"
glob = "0.3"
