[workspace]
resolver = "2"
members = [
    "crates/arrow-ml-common",
    "crates/arrow-ml-core",
    "crates/arrow-ml-linalg",
    "crates/arrow-ml-activations",
    "crates/arrow-ml",
]
exclude = ["crates/arrow-ml-backend-metal"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/universalmind303/arrow-ml"
homepage = "https://github.com/universalmind303/arrow-ml"
readme = "README.md"

[workspace.dependencies]
arrow = { version = ">=56, <59", default-features = false }
num-traits = "0.2"
rayon = "1.10"
libloading = "0.8"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
