[package]
name = "arrow-kernels-linalg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-kernels-common = { path = "../arrow-kernels-common" }
arrow = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matmul_bench"
harness = false
