[package]
name = "arrow-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-kernels-common = { path = "../arrow-kernels-common" }
arrow-kernels-linalg = { path = "../arrow-kernels-linalg" }
arrow-kernels-activations = { path = "../arrow-kernels-activations" }
arrow = { workspace = true }
num-traits = { workspace = true }
