[package]
name = "arrow-ml-activations"
description = "Neural network activation functions (ReLU, GELU, Sigmoid, SiLU, Tanh, Softmax) for Apache Arrow arrays."
keywords = ["arrow", "ml", "activation", "neural-network", "tensor"]
categories = ["science", "mathematics"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
arrow-ml-common = { path = "../arrow-ml-common", version = "0.1.0" }
arrow = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "relu_bench"
harness = false

[[bench]]
name = "sigmoid_bench"
harness = false

[[bench]]
name = "tanh_bench"
harness = false

[[bench]]
name = "gelu_bench"
harness = false

[[bench]]
name = "silu_bench"
harness = false

[[bench]]
name = "softmax_bench"
harness = false
