[package]
name = "arrow-ml-backend-metal"
description = "Metal GPU backend plugin for arrow-ml. Discovered at runtime by arrow-ml-common's backend registry."
keywords = ["arrow", "ml", "metal", "gpu", "backend"]
categories = ["science", "mathematics"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
metal = { workspace = true }
