[package]
name = "arrow-ml-backend-metal"
description = "Metal GPU backend plugin for arrow-ml. Discovered at runtime by arrow-ml-common's backend registry."
keywords = ["arrow", "ml", "metal", "gpu", "backend"]
categories = ["science", "mathematics"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/universalmind303/arrow-ml"
homepage = "https://github.com/universalmind303/arrow-ml"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
metal = "0.31"
