[package]
name = "arrow-ml-common"
description = "Shared error types and runtime backend plugin registry for arrow-ml."
keywords = ["arrow", "ml", "tensor", "registry", "backend"]
categories = ["science", "mathematics"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
arrow = { workspace = true, features = ["ffi"] }
num-traits = { workspace = true }
libloading = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
