[package]
name = "arrow-ml-linalg"
description = "Linear algebra, reduction, reshaping, convolution, and pooling kernels operating on Apache Arrow arrays."
keywords = ["arrow", "linalg", "tensor", "ml", "matmul"]
categories = ["science", "mathematics", "algorithms"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
arrow-ml-common = { path = "../arrow-ml-common", version = "0.1.0" }
arrow-ml-core = { path = "../arrow-ml-core", version = "0.1.0" }
arrow = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = "0.5"
ndarray = "0.16"
matrixmultiply = { version = "0.3", features = ["threading"] }

[[bench]]
name = "matmul_bench"
harness = false
